--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -25,13 +25,17 @@ The first concepts I needed to understand were **Node.js**, which enables JavaSc
 JavaScript는 Browser에서만 실행되는 언어인데, Node.js 덕분에 다른 개발 언어들처럼 PC에서 바로 실행 시켜줄수 있게되었다(이를 runtime 이라고 한다). 
 -->
 
+- [Node.js official website](https://nodejs.org/en/download)
+
 ![Download and Install Node.js and npm](/assets/img/svelte/2025-03-24-SVELTE1_4.png)
 _Download and Install Node.js and npm_
 
 You can download the Windows Installer (.msi) from the [Node.js official website](https://nodejs.org/en/download) and proceed with the installation.  The website provides installation files for each operating system, so you can simply download and install the one that matches your system. One One thing to keep in mind is that <ins>when you install Node.js, **npm (Node Package Manager)**  and **npx (Node Package Execute)**  are installed along with it.</ins>
 
+- [npm official website](https://www.npmjs.com/)
+
 ![npm official website](/assets/img/svelte/2025-03-24-SVELTE1_5.png)
-_[npm official website](https://www.npmjs.com/)_
+_npm official website_
 
 #### *npm(Node Package Manager)*
 
@@ -64,13 +68,14 @@ The entire process is as follows:
 
 - `Create a directory for the project.`
 - `npm init`  
+	To start using npm in your project, you create a `package.json`  
 - `Make index.html and index.js`
 - `npm install <package-name> --verbose`
 	`npm install --verbose`
 - `node index.js`    
-	if you want to execute your script using Node.js
-- `npm run xxx(e.g. dev/test/start/build ...)`
-	Modify the package.json
+	You can execute your script using Node.js
+- `npm run xxx(e.g. dev/test/start/build ...)`     
+	You can add the relevant content to the `scripts` section in `package.json` and run it.
 
 The steps to create and build a Dockerfile are as follows.
 
@@ -352,6 +357,20 @@ S D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run test
 "Error: no test specified" 
 
 
+PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run testdir 
+> 01.npm-study@1.0.0 testdir
+> dir
+ D 드라이브의 볼륨: AIResearcher
+ 볼륨 일련 번호: D22F-F334
+ D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study 디렉터리
+2025-04-04  오후 04:59    <DIR>          .
+2025-04-04  오후 04:59    <DIR>          ..
+2025-04-04  오후 04:59    <DIR>          node_modules
+2025-04-04  오후 04:59               554 package-lock.json    
+2025-04-04  오후 05:12               276 package.json
+               2개 파일                 830 바이트
+               3개 디렉터리  366,700,564,480 바이트 남음
+
 PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run dev    
 
 > 01.npm-study@1.0.0 dev
@@ -366,20 +385,6 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run dev
    │   Copied local address to clipboard!        │
    │                                             │
    └─────────────────────────────────────────────┘
-
-PS D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study> npm run testdir 
-> 01.npm-study@1.0.0 testdir
-> dir
- D 드라이브의 볼륨: AIResearcher
- 볼륨 일련 번호: D22F-F334
- D:\02.MyCode\GP-MyReference\21.MySvelte\01.npm-study 디렉터리
-2025-04-04  오후 04:59    <DIR>          .
-2025-04-04  오후 04:59    <DIR>          ..
-2025-04-04  오후 04:59    <DIR>          node_modules
-2025-04-04  오후 04:59               554 package-lock.json    
-2025-04-04  오후 05:12               276 package.json
-               2개 파일                 830 바이트
-               3개 디렉터리  366,700,564,480 바이트 남음
 ```
 
 
@@ -658,8 +663,8 @@ SvelteKit can only be run as a Node.js server when using **`adapter-node`**.
 If you don’t switch to `adapter-node` or `adapter-static`, there won’t be any issues when running `npm run dev`, but the bundling process won’t proceed during `npm run build`. In other words, the `build` directory won’t be created, so you won’t be able to run `node build`.
 
 - `Modify svelte.config.ts`    
-	`- import adapter from '@sveltejs/adapter-auto';    
-	`+ import adapter from '@sveltejs/adapter-node';
+	`- import adapter from '@sveltejs/adapter-auto;`      
+	`+ import adapter from '@sveltejs/adapter-node;`
 	
 - `npm install -D @sveltejs/adapter-node`
 
@@ -709,8 +714,8 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte\02.npx-study>
 An `output` directory is created inside `.svelte-kit`, and the build results are generated in the `client` and `server` directories respectively. At the same time, bundling is performed and the `build` directory is also created.
 
 Two separate builds were done:
-- **SSR (Server-Side Rendering) build**
-- **Client-side (browser) build**
+- SSR (Server-Side Rendering) build
+- Client-side (browser) build
 
 ```bash
 PS D:\02.MyCode\GP-MyReference\21.MySvelte\02.npx-study> npm run build
