--- a/_posts/frontend/svelte/2025-03-26-Svelte3.md
+++ b/_posts/frontend/svelte/2025-03-26-Svelte3.md
@@ -32,7 +32,7 @@ The command is simple. [Svelte](https://svelte.dev/docs/svelte/getting-started) 
 
 There are various options you can choose from during project creation. I plan to follow the setup based on the relevant packages used in OpenWebUI. For now, let’s proceed with the options below.
 
-- `SvelteKit minimal`, `TypeScript`,  `tailwindcss(not include plugins)`, `npm`
+- `SvelteKit minimal`, `TypeScript`,  `tailwindcss(include plugins(typography))`, `npm`
 
 ```
 PS D:\02.MyCode\GP-MyReference\21.MySvelte> npx sv create 06.svelte-ts-tw-study
@@ -136,9 +136,9 @@ SvelteKit can only be run as a Node.js server when using **`adapter-node`**.
 
 If you don’t switch to `adapter-node` or `adapter-static`, there won’t be any issues when running `npm run dev`, but the bundling process won’t proceed during `npm run build`. In other words, the `build` directory won’t be created, so you won’t be able to run `node build`.
 
-- `Modify svelt.config.ts`    
-	`- import adapter from '@sveltejs/adapter-auto';    
-	`+ import adapter from '@sveltejs/adapter-node';
+- `Modify svelte.config.ts`    
+	`- import adapter from '@sveltejs/adapter-auto;`     
+	`+ import adapter from '@sveltejs/adapter-node;`
 - `npm install -D @sveltejs/adapter-node`
 
 ```javascript
@@ -188,8 +188,8 @@ PS D:\02.MyCode\GP-MyReference\21.MySvelte\06.svelte-ts-tw-study>
 An `output` directory is created inside `.svelte-kit`, and the build results are generated in the `client` and `server` directories respectively. At the same time, bundling is performed and the `build` directory is also created.
 
 Two separate builds were done:
-- **SSR (Server-Side Rendering) build**
-- **Client-side (browser) build**
+- SSR (Server-Side Rendering) build
+- Client-side (browser) build
 
 ```bash
 PS D:\02.MyCode\GP-MyReference\21.MySvelte\06.svelte-ts-tw-study> npm run build
