--- a/_posts/frontend/svelte/2025-03-25-Svelte2.md
+++ b/_posts/frontend/svelte/2025-03-25-Svelte2.md
@@ -4,7 +4,7 @@ description: Let's Learn Svelte and SvelteKit.
 author: DS2Man
 date: 2025-03-25 11:00:00 +0000
 categories: [Frontend, Svelte]
-tags: [Frontend, Svelte, SvelteKit, Vite]
+tags: [Frontend, Svelte, SvelteKit]
 math: true
 pin: true
 ---
