--- a/_posts/frontend/svelte/2025-03-27-Svelte4.md
+++ b/_posts/frontend/svelte/2025-03-27-Svelte4.md
@@ -4,24 +4,23 @@ description: Let's learn the basic syntax of svelte.
 author: DS2Man
 date: 2025-03-27 11:00:00 +0000
 categories: [Frontend, Svelte]
-tags: [Frontend, Svelte, Vite, Javascript]
+tags: [Frontend, Svelte, SvelteKit]
 math: true
 pin: true
 ---
   
 ## *Basic*
-
 #### *Examples*
 
-- App.svelte
+- /src/routes/+page.svelte
 
 ```svelte
 <script>
   // [Learn1]Imports content from another Svelte file.
-  // Imports the content of Hello.svelte using the import statement
-  import Hello from './Hello.svelte'
-  
-  let name = "App.svelte"
+  // SvelteKit automatically makes files under `src/lib` available using the `$lib` import alias.(https://svelte.dev/docs/kit/$lib)
+  import Hello from '$lib/components/Hello.svelte'
+  import Counter from '$lib/components/Counter.svelte';
+  let name = "+page.svelte"
   let isActive = false
 
   // [Learn2]Declare functions
@@ -65,6 +64,8 @@ pin: true
 
   <!-- Renders the Hello component -->
   <Hello />
+  <!-- Renders the Counter component -->
+  <Counter />
 </main>
 
 <style>
@@ -75,14 +76,14 @@ pin: true
 
 ```
 
-- Hello.svelte
+- /src/lib/components/Hello.svelte
 
 ```svelte
 <script>
 </script>
 
 <main>
-    <h1>Hello!</h1>
+  <h1>Hello!</h1>
 </main>
 
 <style>
@@ -92,17 +93,33 @@ pin: true
 </style>
 ```
 
-![Click Result](/assets/img/svelte/2025-03-27-SVELTE4_1.png)
-_Click Result_
+- /src/lib/components/Counter.svelte
+
+```svelte
+<script>
+  let count = $state(0)
+  const increment = () => {
+    count += 1
+  }
+</script>  
+
+<button onclick={increment}>
+  count is {count}
+</button>
+```
+
+![Click Result](/assets/img/svelte/2025-03-27-SVELTE4_1.gif)
+_Result_
 
 #### *Learn1. Imports content from another Svelte file.*
 
 In Svelte, it is common to split your application into multiple components for better reusability and maintainability.  
-To use a component defined in another `.svelte` file, you can import it using JavaScript’s `import` statement.
+To use a component defined in another `.svelte` file, you can import it using JavaScript’s `import` statement.    
+And svelteKit automatically makes files under `src/lib` available using the `$lib` import alias.([SvelteKit Docs](https://svelte.dev/docs/kit/$lib))
 
 ```svelte
 <script>
-  import Hello from './Hello.svelte';
+  import Hello from '$lib/components/Hello.svelte'
 </script>
 
 <main>
@@ -111,15 +128,17 @@ To use a component defined in another `.svelte` file, you can import it using Ja
 ```
 
 Note. When working with Svelte, you'll often see two different styles of `import` statements:    
+
 ```svelte
-`import App from './App.svelte'`    
+`import App from '$lib/components/App.svelte'`    
 `import { fade } from 'svelte/transition'`
 ```
 
 - `./App.svelte` itself is a single component, so it is imported **without curly braces `{}`.**    
 
 ```svelte
-// App.svelte
+<!-- App.svelte -->
+
 <script>
   export default App;
 </script>
@@ -129,6 +148,7 @@ Note. When working with Svelte, you'll often see two different styles of `import
 
 ```typescript
 // index.d.ts
+
 declare module 'svelte/transition' {
   export function fade(node: Element, { delay, duration, easing }?: FadeParams | undefined): TransitionConfig;
 }
@@ -143,22 +163,20 @@ declare module 'svelte/store' {
 
 ```svelte
 <script>
-  import App from './App.svelte';
+  import App from '$lib/components/App.svelte';
   import { fly, fade } from 'svelte/transition';
   import { writable } from 'svelte/store';
-  
+
+  let isEvent = true;
   export let name = writable('DS2Man');
 </script>
 
-{% raw %}
 <main>
   <App />
-
   <div in:fly={{y: -400, duration: 1000}} out:fade>
        <button on:click={()=>(isEvent=false)}>X</button>
   </div>
-  </main>
-{% endraw %}
+</main>
 ```
 
 As I told you, the way you use the `import` statement depends on how the variables or functions are **exported**.  
@@ -227,83 +245,87 @@ Svelte provides **directive syntax** to easily handle events, classes, styles, t
 |**Event Directive**|`on:click={handleClick}`|Runs a function when an event occurs|
 |**Bind Directive**|`bind:value={inputValue}`|Two-way binding between a variable and an element|
 |**Transition Directive**|`transition:fade`|Adds transition when the element enters/leaves|
-|**In Directive**|`in:fade`|Applies animation when element appears|
-|**Out Directive**|`out:fade`|Applies animation when element disappears|
+|**In/Out Directive**|`in:fade`<br>`out:fade`|Applies animation when element appears/disappears|
 |**Animate Directive**|`animate:flip`|Animates layout changes in lists or positions|
 |**Ref Directive**|`bind:this={element}`|References a DOM element|
 
 ```svelte
 <script>
-  import { fade } from 'svelte/transition';
-  import { flip } from 'svelte/animate';
-  let isActive = true;
-  let username = "";
-  let isVisible = true;
-  let items = [1, 2, 3];
-  let box;
+    import { fade } from 'svelte/transition';
+    import { flip } from 'svelte/animate';
+    let isActive = true;
+    let username = "";
+    let isVisible = true;
+    let items = [1, 2, 3];
+    let box;
+    
+    function handleClick() {
+      alert('Button clicked!');
+    }
   
-  function handleClick() {
-    alert('Button clicked!');
-  }
+    function toggleVisible() {
+      isVisible = !isVisible;
+    }
 
-  function toggleVisible() {
-    isVisible = !isVisible;
-  }
+    function shuffle() {
+	  items = [...items].reverse();
+	}
 </script>
-
-<!-- Class Directive -->
-<h1 class:myactive={isActive}>Hello!</h1>
-
-<!-- Style Directive -->
-<p style:color={isActive ? 'blue' : 'black'}>Text</p>
-
-<!-- Event Directive -->
-<button on:click={handleClick}>Click me</button>
-
-<!-- Bind Directive -->
-<input bind:value={username} placeholder="Enter your name" />
-<p>Your name: {username}</p>
-
-<!-- Transition Directive -->
-<button on:click={toggleVisible}>Toggle Box</button>
-{#if isVisible}
-  <div transition:fade>
-    I will fade in and out
+  
+  <!-- Class Directive -->
+  <h1 class:myactive={isActive}>Hello!</h1>
+  
+  <!-- Style Directive -->
+  <p style:color={isActive ? 'blue' : 'black'}>Text</p>
+  
+  <!-- Event Directive -->
+  <button on:click={handleClick}>Click me</button>
+  
+  <!-- Bind Directive -->
+  <input bind:value={username} placeholder="Enter your name" />
+  <p>Your name: {username}</p>
+  
+  <!-- Transition Directive -->
+  <button on:click={toggleVisible}>Toggle Box</button>
+  {#if isVisible}
+    <div transition:fade>
+      I will fade in and out
+    </div>
+  {/if}
+  
+  <!-- In Directive -->
+  {#if isVisible}
+    <div in:fade>
+      I will fade in
+    </div>
+  {/if}
+  
+  <!-- Out Directive -->
+  {#if isVisible}
+    <div out:fade>
+      I will fade out
+    </div>
+  {/if}
+  
+  <!-- Animate Directive  -->
+  <button on:click={shuffle}>Reverse</button>
+  
+  <ul>
+    {#each items as item (item)}
+      <li animate:flip>{item}</li>
+    {/each}
+  </ul>
+  
+  <!-- Ref Directive -->
+  <div bind:this={box}>
+    This div is referenced by "box" variable.
   </div>
-{/if}
-
-<!-- In Directive -->
-{#if isVisible}
-  <div in:fade>
-    I will fade in
-  </div>
-{/if}
-
-<!-- Out Directive -->
-{#if isVisible}
-  <div out:fade>
-    I will fade out
-  </div>
-{/if}
-
-<!-- Animate Directive  -->
-<ul>
-  {#each items as item (item)}
-    <li animate:flip>{item}</li>
-  {/each}
-</ul>
-
-<!-- Ref Directive -->
-<div bind:this={box}>
-  This div is referenced by "box" variable.
-</div>
-
+  
 <style>
-  h1.myactive {
-    color: red;
-  }
+    h1.myactive {
+        color: red;
+    }
 </style>
-
 ```
 
 ![Directive Types](/assets/img/svelte/2025-03-27-SVELTE4_3.gif)
@@ -377,7 +399,6 @@ _Event Handling_
 
 
 ## *Conditional Statements and Loops*
-
 #### *Examples*
 
 - App.svelte
