--- a/_posts/frontend/svelte/2025-03-28-Svelte5.md
+++ b/_posts/frontend/svelte/2025-03-28-Svelte5.md
@@ -4,7 +4,7 @@ description: Let's learn the basic syntax of svelte.
 author: DS2Man
 date: 2025-03-28 11:00:00 +0000
 categories: [Frontend, Svelte]
-tags: [Frontend, Svelte, Vite, Javascript]
+tags: [Frontend, Svelte, SvelteKit]
 math: true
 pin: true
 ---
@@ -23,7 +23,7 @@ One of the **most important concepts in Svelte components** is **Props**.
 In the child component (e.g., `Child.svelte`), use the `export let` syntax to declare a prop.
 
 ```svelte
-<!-- Child.svelte -->
+<!-- $lib/components/Child.svelte -->
 <script>
   export let name;
 </script>
@@ -34,9 +34,9 @@ In the child component (e.g., `Child.svelte`), use the `export let` syntax to de
 In the parent component (e.g., `App.svelte`), pass the value to the child:
 
 ```svelte
-<!-- App.svelte -->
+<!-- /src/routes/+page.svelte -->
 <script>
-  import Child from './Child.svelte';
+  import Child from '$lib/components/Child.svelte';
 </script>
 
 <Child name="DS2Man" />
@@ -49,18 +49,18 @@ Hello, DS2Man!
 
 #### *Examples*
 
-- App.svelte
+- /src/routes/+page.svelte
 
 ```svelte
 <script>
   // Import child components
   // FruitName.svelte: displays fruit name only
   // Fruit.svelte: displays fruit name and color
-  import FruitName from './Fruit_name.svelte'
-  import Fruit from './Fruit.svelte'
+  import FruitName from '$lib/components/Fruit_name.svelte';
+  import Fruit from '$lib/components/Fruit.svelte';
 
   // Array of fruit names (used in Case 1)
-  let fruits_name = ['Apple', 'Banna', 'Cherry', 'Orange', 'Mango']
+  let fruits_name = ['Apple', 'Banna', 'Cherry', 'Orange', 'Mango'];
 
   // Array of fruit objects with id, name, and color (used in Case 2 & 3)
   let fruits = [
@@ -202,9 +202,9 @@ Suppose that in `Parent.svelte`, there is no need to use or manage the `name` va
 This issue can be improved by using a store.
 
 ```svelte
-<!-- App.svelte -->
+<!-- +/src/routes/+page.svelte -->
 <script>
-  import Parent from './Parent.svelte'
+  import Parent from '$lib/components/Parent.svelte'
   let name = "DS2Man"
 
 </script>
@@ -219,9 +219,9 @@ This issue can be improved by using a store.
 ```
 
 ```svelte
-<!-- Parent.svelte -->
+<!-- $lib/components/Parent.svelte -->
 <script>
-  import Child from './Child.svelte'
+  import Child from '$lib/components/Child.svelte'
   export let name
   let isActive = true
 
@@ -244,7 +244,7 @@ This issue can be improved by using a store.
 ```
 
 ```svelte
-<!-- Child.svelte -->
+<!-- $lib/components/Child.svelte -->
 <script>
   export let name
 </script>
@@ -265,7 +265,7 @@ This allows any component to **access and update shared data directly**, without
 In our example, we created a **writable store** named `name` and used it in `App.svelte`, `Parent.svelte`, and `Child.svelte`.
 
 ```javascript
-// Store.js
+// $lib/stores/Store.ts
 
 // Import writable store from Svelte's store module
 import { writable } from 'svelte/store';
@@ -276,10 +276,10 @@ export let name = writable('DS2Man');
 ```
 
 ```svelte
-<!-- App.svelte -->
+<!-- /src/routes/+page.svelte -->
 <script>
-  import Parent from './Parent.svelte';
-  import { name } from './Store.js'; // Importing the store 'name'
+  import Parent from '$lib/components/Parent.svelte'
+  import { name } from '$lib/stores/Store.ts'
 </script>
 
 <main>
@@ -298,26 +298,37 @@ export let name = writable('DS2Man');
 ```
 
 ```svelte
-<!-- Parent.svelte -->
+<!-- '$lib/components/Parent.svelte -->
 <script>
-  import Child from './Child.svelte'; // Import Child component
+  import Child from '$lib/components/Child.svelte'
+  import { name } from '$lib/stores/Store.ts'
+
+  let isActive = true
+
+  const toggle = () => {
+    if (isActive === true)
+      // $name="Parent"
+      name.set("Parent")
+    else
+      // $name="DS2Man"
+      name.set("DS2Man")
+    isActive = !isActive
+  }
 </script>
 
 <main>
-  <button on:click>Parent!</button>
-
+  <button on:click={toggle}>Parent!</button>   
   <Child />
 </main>
 
 <style>
 </style>
-
 ```
 
 ```svelte
-<!-- Child.svelte -->
+<!-- '$lib/components/Child.svelte -->
 <script>
-  import { name } from './Store.js'; // Import the 'name' store
+  import { name } from '$lib/stores/Store.ts' // Import the 'name' store
 </script>
 
 <main>
@@ -325,11 +336,12 @@ export let name = writable('DS2Man');
     When this button is clicked, the store value will be updated to "Child".
     All components using $name will automatically update.
   -->
-  <button on:click={() => { $name = "Child" }}>Child!</button>
+  <button on:click={() => {name.set("Child")}}>Child!</button>
 </main>
 
 <style>
 </style>
-
 ```
 
+![Result](/assets/img/svelte/2025-03-28-SVELTE5_2.gif)
+_Result_
