--- a/_posts/frontend/svelte/2025-03-24-Svelte1.md
+++ b/_posts/frontend/svelte/2025-03-24-Svelte1.md
@@ -4,7 +4,7 @@ description: Let's install Node.js(npm, npx) and Learn to create a Project.
 author: DS2Man
 date: 2025-03-24 11:00:00 +0000
 categories: [Frontend, Svelte]
-tags: [Frontend, Svelte, Vite, Javascript]
+tags: [Frontend, Svelte, SvelteKit]
 math: true
 pin: true
 ---
