--- a/_posts/frontend/svelte/2025-03-29-Svelte6.md
+++ b/_posts/frontend/svelte/2025-03-29-Svelte6.md
@@ -4,7 +4,7 @@ description: Let's implement a simple project.
 author: DS2Man
 date: 2025-03-29 11:00:00 +0000
 categories: [Frontend, Svelte]
-tags: [Frontend, Svelte, Vite, Javascript]
+tags: [Frontend, Svelte, SvelteKit]
 math: true
 pin: true
 ---
