--- a/_posts/fastapi/2025-04-07-FastAPI1.md
+++ b/_posts/fastapi/2025-04-07-FastAPI1.md
@@ -50,7 +50,7 @@ pip install fastapi uvicorn
 
 `uvicorn` is an ASGI-compatible server used to run FastAPI applications.
 
-#### *Creating Your First FastAPI Application*
+## *Creating Your First FastAPI Application*
 
 Let’s create a simple "Hello, World!" API:
 
@@ -68,11 +68,11 @@ def sample_task():
     }
 
 if __name__ == "__main__":
-    access_port = 9249
+    access_port = 9248
     uvicorn.run("main:app", host="127.0.0.1", port=access_port, reload=True)
 ```
 
-In this code, the `@app.get("/")` decorator defines a function that is executed when a GET request is made to the root path. This function returns a JSON response `{"message": "Hello, World!"}`.
+In this code, the `@app.get("/")` decorator defines a function that is executed when a GET request is made to the root path. This function returns a JSON response .
 
 This command runs the `app` object inside the `main.py` file, with the `reload` option enabling automatic server restart on code changes.
 
@@ -105,7 +105,7 @@ def sample_task():
 
 if __name__ == "__main__":
     access_port = 9248
-    uvicorn.run("main_sample:app", host="127.0.0.1", port=access_port, reload=True)
+    uvicorn.run("main:app", host="127.0.0.1", port=access_port, reload=True)
 ```
 
 ## *Viewing the API Documentation*
@@ -133,7 +133,7 @@ When developing with FastAPI, there are three main ways to test your API endpoin
 
 ```python
 # Linux
-curl.exe -X 'GET' 'http://127.0.0.1:9248/' -H 'accept: application/json'
+curl -X 'GET' 'http://127.0.0.1:9248/' -H 'accept: application/json'
 
 # Windows
 curl.exe -X 'GET' 'http://127.0.0.1:9248/' -H 'accept: application/json'
@@ -151,6 +151,7 @@ print(response.json())
 
 ![How to Test FastAPI](/assets/img/fastapi/2025-04-07-FastAPI1_2.png)
 _How to Test FastAPI_
+
 ## *Advantages of FastAPI*
 
 - **Rapid Development**:  
