--- a/_posts/fastapi/2025-04-07-FastAPI1.md
+++ b/_posts/fastapi/2025-04-07-FastAPI1.md
@@ -1,6 +1,6 @@
 ---
 title: Introduce FastAPI
-description: Let's install and use FastAPI
+description: Let's install and use FastAPI.
 author: DS2Man
 date: 2025-04-07 11:00:00 +0000
 categories: [Backend, FastAPI]
@@ -123,13 +123,10 @@ _API Documentation_
 When developing with FastAPI, there are three main ways to test your API endpoints:
 
 - FastAPI Documentation (Swagger UI)
-- Using `curl` Command    
-  `curl.exe -X 'GET' 'http://127.0.0.1:9248/' -H 'accept: application/json'`    
+- Using `curl` Command      
   In Windows PowerShell, the `curl` command is not recognized as the real `curl`    
-  instead, it is automatically mapped to the `Invoke-WebRequest` command.    
-  Because of this, if you use Linux/Mac-style options like `-H 'accept: application/json'`,      
-  PowerShell interprets `'accept: application/json'` as a plain string, which causes an error.  
-  If you want to use it like on Linux or Mac,  you can directly call the built-in `curl.exe` that comes with Windows.
+  If you want to use it like on Linux or Mac,  you can directly call the built-in `curl.exe` that comes with Windows.    
+  `curl.exe -X 'GET' 'http://127.0.0.1:9248/' -H 'accept: application/json'`    
 
 ```python
 # Linux
