--- a/_posts/fastapi/2025-04-08-FastAPI2.md
+++ b/_posts/fastapi/2025-04-08-FastAPI2.md
@@ -1,6 +1,6 @@
 ---
-title: Structuring Your FastAPI Project with Routers
-description: Let's learn the FastAPI with Routers
+title: Structuring FastAPI Project with Routers
+description: Let's learn how to organize a scalable FastAPI using APIRouter.
 author: DS2Man
 date: 2025-04-08 11:00:00 +0000
 categories: [Backend, FastAPI]
@@ -106,7 +106,7 @@ from fastapi import APIRouter
 router = APIRouter()
 
 @router.get("/info")
-async def get_model1_info():
+async def get_model2_info():
     return {"model": "Model2", "description": "This is model2 information."}
 ```
 
