--- a/_posts/fastapi/2025-04-09-FastAPI3.md
+++ b/_posts/fastapi/2025-04-09-FastAPI3.md
@@ -1,6 +1,6 @@
 ---
-title: Understanding Synchronous and Asynchronous in FastAPI
-description: Let's learn the FastAPI with Routers
+title: Understanding Sync vs Async in FastAPI
+description: Let's Learn the key differences between Sync and Async in FastAPI.
 author: DS2Man
 date: 2025-04-09 11:00:00 +0000
 categories: [Backend, FastAPI]
@@ -46,20 +46,26 @@ def sync_func(
 ```
 
 ```python
-import requests
-from pprint import pprint
-
 url = "http://127.0.0.1:9248/ds2man/model1/sync/"
 data = {
     "question": "Where is the captial of Korea?",
     "user_name": "DS2Man"
 }
 
+start_time = time.time()
 response = requests.get(url, params=data)
-print(response.json())
+end_time = time.time()
+elapsed_time = end_time - start_time
+print(f"Duration: {elapsed_time:.2f}s")  
+
+print(f"\nResponse:")
+pprint(response.json())
 ```
 
 ```bash
+Duration: 2.01s
+
+Response:
 {'message': 'Synchronous processing completed',
  'question': 'Where is the captial of Korea?',
  'result': 'ok',
@@ -98,20 +104,26 @@ async def sync_func( # Note. Use `async`
 ```
 
 ```python
-import requests
-from pprint import pprint
-
 url = "http://127.0.0.1:9248/ds2man/model1/async/"
 data = {
     "question": "Where is the captial of Korea?",
     "user_name": "DS2Man"
 }
 
+start_time = time.time()
 response = requests.get(url, params=data)
-print(response.json())
+end_time = time.time()
+elapsed_time = end_time - start_time
+print(f"Duration: {elapsed_time:.2f}s")  
+
+print(f"\nResponse:")
+pprint(response.json())
 ```
 
 ```bash
+Duration: 2.02s
+
+Response:
 {'message': 'Asynchronous processing completed',
  'question': 'Where is the captial of Korea?',
  'result': 'ok',
@@ -127,7 +139,7 @@ print(response.json())
 |Best Use Cases|CPU-bound tasks|I/O-bound tasks (DB, network, files)|
 |Keywords Used|`def`, `time.sleep()`|`async def`, `await`, `asyncio.sleep()`|
 
-## *Using `asyncio.gather`*
+## *Using asyncio.gather*
 
 We explored the concepts of synchronous and asynchronous processing. However, in the two examples above, both produced results after 2 seconds, making it difficult to feel the difference between them. To better understand the characteristics of asynchronous execution, I created an example using `asyncio.gather`.
 
@@ -164,7 +176,6 @@ async def run_tasks(
 import requests
 from pprint import pprint
 
-# async_func
 url = "http://127.0.0.1:9248/ds2man/model1/async/batch"
 data = {
     "question": "Where is the captial of Korea?",
