--- a/_posts/fastapi/2025-04-11-FastAPI5.md
+++ b/_posts/fastapi/2025-04-11-FastAPI5.md
@@ -95,24 +95,25 @@ logging.basicConfig(
 ) 
 
 async def periodic_task():
-    while True:
-        logging.info("Running periodic task...")
-        await asyncio.sleep(5)  # Executes every 5 seconds  
+    while True:
+        logging.info("Running periodic task...")
+        await asyncio.sleep(5)  # Executes every 5 seconds
 
 @asynccontextmanager
 async def lifespan(app: FastAPI):
-    logging.info("Starting app initialization...")
-    task = asyncio.create_task(periodic_task())  # Launch background task
-    
-    yield
-
-    logging.info("Preparing for app shutdown...")
-    task.cancel()  # Cancel background task
-
-    try:
-        await task
-    except asyncio.CancelledError:
-        logging.info("Background task has been safely canceled.")
+    logging.info("Starting app initialization...")
+    task = asyncio.create_task(periodic_task())  # Launch background task
+    
+    # The code above yield is executed when the app starts.
+    # The code below yield is executed when the app shuts down.
+    yield
+    
+    logging.info("Preparing for app shutdown...")
+    task.cancel()  # Cancel background task
+    try:
+        await task
+    except asyncio.CancelledError:
+        logging.info("Background task has been safely canceled.")
 
 app = FastAPI(lifespan=lifespan)
 ```
@@ -136,5 +137,4 @@ INFO:     Waiting for application shutdown.
 INFO:     Application shutdown complete.
 INFO:     Finished server process [41176]
 INFO:     Stopping reloader process [32624]
-
 ```
