--- a/_posts/grammer/python/2024-12-01-Python1.md
+++ b/_posts/grammer/python/2024-12-01-Python1.md
@@ -3,7 +3,9 @@ title: import os
 description: Let's use `os` module.
 author: DS2Man
 date: 2024-12-01 11:00:00 +0000
-categories: [Grammer, Python]
+categories:
+  - Grammer
+  - Python
 tags:
   - Python
   - Grammer
