--- a/_posts/fastapi/2025-04-07-FastAPI1.md
+++ b/_posts/fastapi/2025-04-07-FastAPI1.md
@@ -49,6 +49,7 @@ pip install fastapi uvicorn
 ```
 
 `uvicorn` is an ASGI-compatible server used to run FastAPI applications.
+ASGI stands for Asynchronous Server Gateway Interface, and it's a standard interface between web servers and applications that enables Python web frameworks to support **asynchronous (async)** functionality.
 
 ## *Creating Your First FastAPI Application*
 
@@ -143,7 +144,20 @@ import requests
 
 url = f"http://127.0.0.1:9248/"
 response = requests.get(url)
-print(response.json())
+res = response.json()
+print(res)
+```
+
+- Python Code (e.g., `aiohttp` library)
+
+```python
+import aiohttp  
+
+url = "http://127.0.0.1:9248/"
+async with aiohttp.ClientSession() as session:
+    async with session.get(url) as response:
+        res = await response.json()
+        print(res)
 ```
 
 ![How to Test FastAPI](/assets/img/fastapi/2025-04-07-FastAPI1_2.png)
