--- a/_posts/fastapi/2025-04-09-FastAPI3.md
+++ b/_posts/fastapi/2025-04-09-FastAPI3.md
@@ -14,8 +14,7 @@ When working with HTTP communication in Python, three popular libraries often co
 
 In this post, we’ll dive into the characteristics, usage examples, and differences between these libraries to help you choose the right one for your project.
 
-
-## *Prerequisite*
+The main application was written as follows.
 
 ```python
 # /routers/basic.py 
@@ -31,6 +30,19 @@ def response_case1():
     }
     return result
 ```
+
+## *Key Differences Comparison*
+
+|Feature|`requests`|`httpx`|`aiohttp`|
+|---|---|---|---|
+|**Async Support**|Not supported (synchronous only)|Supported via `AsyncClient`|Supported via `ClientSession`|
+|**Ease of Use**|Very easy|Easy (similar to `requests` syntax)|Slightly complex (requires async familiarity)|
+|**Performance (Parallel)**|Slow (thread-based)|Fast (supports async)|Very fast (designed for async)|
+|**Streaming**|Inefficient (waits for full response)|Efficient (supports streaming responses)|Efficient (excellent streaming capabilities)|
+|**WebSocket**|Not supported|Not supported|Built-in WebSocket client|
+|**Best Use Case**|Simple REST API calls|Mixed sync/async API calls|WebSocket, high-concurrency or async-heavy apps|
+
+As shown in the table above, `requests` does not support asynchronous operations, whereas both `httpx` and `aiohttp` do. Therefore, I will primarily use `aiohttp` moving forward. When synchronous code is required, I will explicitly indicate the use of `requests`. Please keep this in mind.
 
 ## *requests*
 
@@ -175,6 +187,7 @@ JSON Body:
 type(data): <class 'dict'>
 {'message': 'Hello, World!', 'user_name': 'DS2Man'}
 ```
+
 
 ## *What is a `response` object?*
 
