--- a/_posts/grammer/python/2024-12-04-Python4.md
+++ b/_posts/grammer/python/2024-12-04-Python4.md
@@ -31,7 +31,7 @@ In this post, we’ll clearly explain the differences between a Python dictionar
   Python allows both single and double quotes, but JSON strictly requires double quotes around keys and string values.
 
 ```python
-data = {'name': 'Alice', 'age': 30}
+data = {'name': 'DS2Man', 'age': 30}
 print(type(data))  # <class 'dict'>
 print(data) # {'name': 'DS2Man', 'age': 30} # Note. single or double
 
