--- a/_posts/fastapi/2025-04-07-FastAPI2.md
+++ b/_posts/fastapi/2025-04-07-FastAPI2.md
@@ -1,5 +1,5 @@
 ---
-title: Understanding Request and Response in FastAPI
+title: Request and Response in FastAPI
 description: Let's learn request and response.
 author: DS2Man
 date: 2025-04-07 11:00:00 +0000
@@ -175,8 +175,6 @@ Headers:
  'Content-Type': 'application/json',
  'Date': 'Tue, 06 May 2025 00:02:57 GMT',
  'Server': 'uvicorn',
- 'myprocess-time': '0.00099945068359375',
- 'request-url': '/ds2man/basic/request&response/case3',
  'x-custom-header': 'FastAPI Rocks'}
 
 JSON Body:
@@ -224,8 +222,6 @@ Headers:
  'Content-Type': 'application/json',
  'Date': 'Tue, 06 May 2025 00:08:40 GMT',
  'Server': 'uvicorn',
- 'myprocess-time': '0.0009958744049072266',
- 'request-url': '/ds2man/basic/request&response/case4',
  'x-echoed': 'True'}
 
 JSON Body:
