--- a/_posts/fastapi/2025-04-09-FastAPI4.md
+++ b/_posts/fastapi/2025-04-09-FastAPI4.md
@@ -1,5 +1,5 @@
 ---
-title: Comparing Python HTTP Libraries
+title: HTTP Communication in FastAPI
 description: Let's learn `requests`, `httpx`, and `aiohttp`
 author: DS2Man
 date: 2025-04-09 11:00:00 +0000
@@ -46,7 +46,7 @@ As shown in the table above, `requests` does not support asynchronous operations
 
 ## *requests*
 
-**requests** is considered the de facto standard for making HTTP requests in Python.  
+**requests** is considered the standard for making HTTP requests in Python.  
 It is **synchronous** and known for its simplicity and readability.
 
 #### *Key Features*
@@ -103,8 +103,6 @@ Headers:
 {'content-length': '48',
  'content-type': 'application/json',
  'date': 'Fri, 02 May 2025 18:23:50 GMT',
- 'myprocess-time': '0.001997709274291992',
- 'request-url': '/ds2man/basic/response/case1',
  'server': 'uvicorn'}
 OK?          : True
 
@@ -178,9 +176,7 @@ Headers:
 {'Content-Length': '48',
  'Content-Type': 'application/json',
  'Date': 'Fri, 02 May 2025 18:27:06 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.001001119613647461',
- 'request-url': '/ds2man/basic/response/case1'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
