--- a/_posts/fastapi/2025-04-10-FastAPI5.md
+++ b/_posts/fastapi/2025-04-10-FastAPI5.md
@@ -1,6 +1,6 @@
 ---
-title: Return a Custom Response
-description: Let's learn Response
+title: Custom Response in FastAPI
+description: Let's return Custom Response
 author: DS2Man
 date: 2025-04-10 11:00:00 +0000
 categories: [Backend, FastAPI]
@@ -83,9 +83,7 @@ Headers:
 {'Content-Length': '48',
  'Content-Type': 'application/json',
  'Date': 'Fri, 02 May 2025 20:28:14 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.003000497817993164',
- 'request-url': '/ds2man/basic/response/case1'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -116,9 +114,7 @@ Headers:
 {'Content-Length': '24',
  'Content-Type': 'application/json',
  'Date': 'Fri, 02 May 2025 20:28:41 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.0010008811950683594',
- 'request-url': '/ds2man/basic/response/case2'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -149,9 +145,7 @@ Headers:
 {'Content-Length': '54',
  'Content-Type': 'application/json',
  'Date': 'Fri, 02 May 2025 20:29:03 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.002001047134399414',
- 'request-url': '/ds2man/basic/response/case3'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -198,9 +192,7 @@ Headers:
 {'Content-Length': '171',
  'Content-Type': 'text/html; charset=utf-8',
  'Date': 'Fri, 02 May 2025 20:31:16 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.0011403560638427734',
- 'request-url': '/ds2man/basic/response/case4'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 Text Body:
@@ -241,9 +233,7 @@ Headers:
 {'Content-Length': '171',
  'Content-Type': 'text/html; charset=utf-8',
  'Date': 'Fri, 02 May 2025 20:31:48 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.00099945068359375',
- 'request-url': '/ds2man/basic/response/case4'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 Text Body:
@@ -322,9 +312,7 @@ Headers:
 {'Content-Type': 'text/plain; charset=utf-8',
  'Date': 'Fri, 02 May 2025 20:35:28 GMT',
  'Server': 'uvicorn',
- 'Transfer-Encoding': 'chunked',
- 'myprocess-time': '0.0010006427764892578',
- 'request-url': '/ds2man/basic/response/case6'}
+ 'Transfer-Encoding': 'chunked'}
 OK?          : True
 
 [Streaming Body]
