--- a/_posts/fastapi/2025-04-11-FastAPI6.md
+++ b/_posts/fastapi/2025-04-11-FastAPI6.md
@@ -1,5 +1,5 @@
 ---
-title: HTTP Methods in FastAPI(GET, POST, PUT, DELETE)
+title: HTTP Methods(GET, POST, PUT, DELETE) in FastAPI
 description: Let's learn HTTP Methods
 author: DS2Man
 date: 2025-04-11 11:00:00 +0000
@@ -93,9 +93,7 @@ Headers:
 {'Content-Length': '65',
  'Content-Type': 'application/json',
  'Date': 'Sat, 03 May 2025 00:39:56 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.0009996891021728516',
- 'request-url': '/ds2man/basic/task/'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -158,9 +156,7 @@ Headers:
 {'Content-Length': '66',
  'Content-Type': 'application/json',
  'Date': 'Sat, 03 May 2025 00:41:30 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.0009999275207519531',
- 'request-url': '/ds2man/basic/task/'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -220,9 +216,7 @@ Headers:
 {'Content-Length': '65',
  'Content-Type': 'application/json',
  'Date': 'Sat, 03 May 2025 00:42:04 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.0019986629486083984',
- 'request-url': '/ds2man/basic/task/'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -284,9 +278,7 @@ Headers:
 {'Content-Length': '68',
  'Content-Type': 'application/json',
  'Date': 'Sat, 03 May 2025 00:43:33 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.0010013580322265625',
- 'request-url': '/ds2man/basic/task/'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
