--- a/_posts/fastapi/2025-04-12-FastAPI7.md
+++ b/_posts/fastapi/2025-04-12-FastAPI7.md
@@ -1,6 +1,6 @@
 ---
-title: Response Model
-description: Let's learn Response Models in FastAPI for Clean and Secure APIs
+title: Response Model in FastAPI
+description: Let's learn Response Models for Clean and Secure APIs
 author: DS2Man
 date: 2025-04-12 11:00:00 +0000
 categories: [Backend, FastAPI]
@@ -67,9 +67,7 @@ Headers:
 {'Content-Length': '74',
  'Content-Type': 'application/json',
  'Date': 'Sun, 04 May 2025 01:47:07 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.00099945068359375',
- 'request-url': '/ds2man/basic/response_model/case1'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -131,9 +129,7 @@ Headers:
 {'Content-Length': '148',
  'Content-Type': 'application/json',
  'Date': 'Sun, 04 May 2025 02:08:47 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.001001119613647461',
- 'request-url': '/ds2man/basic/response_model/case2'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
@@ -201,9 +197,7 @@ Headers:
 {'Content-Length': '100',
  'Content-Type': 'application/json',
  'Date': 'Sun, 04 May 2025 02:04:21 GMT',
- 'Server': 'uvicorn',
- 'myprocess-time': '0.00099945068359375',
- 'request-url': '/ds2man/basic/response_model/case3'}
+ 'Server': 'uvicorn'}
 OK?          : True
 
 JSON Body:
