--- a/_posts/grammer/python/2024-12-04-Python4.md
+++ b/_posts/grammer/python/2024-12-04-Python4.md
@@ -33,12 +33,12 @@ In this post, we’ll clearly explain the differences between a Python dictionar
 ```python
 data = {'name': 'DS2Man', 'age': 30}
 print(type(data))  # <class 'dict'>
-print(data) # {'name': 'DS2Man', 'age': 30} # Note. single or double
+print(data) # {'name': 'DS2Man', 'age': 30} # Note. single or double quotation
 
 import json
 dict2json = json.dumps(data)
 print(type(dict2json))  # <class 'str'>
-print(dict2json) # {"name": "DS2Man", "age": 30} # Note. must double
+print(dict2json) # {"name": "DS2Man", "age": 30} # Note. must double quotation
 ```
 
 ## *How to Convert Between Them*
@@ -48,14 +48,25 @@ print(dict2json) # {"name": "DS2Man", "age": 30} # Note. must double
 ```python
 import json
 
-data = {'name': 'DS2Man', 'age': 30}
-print(type(data))  # <class 'dict'>
-print(data) # {'name': 'DS2Man', 'age': 30} # Note. single or double
+data = {'name': 'DS2Man, 데투남', 'age': 30}
+print(type(data)) # <class 'dict'>
+print(data) # {'name': 'DS2Man, 데투남', 'age': 30} # Note. single or double
 
-dict2json = json.dumps(data)
-print(type(dict2json))  # <class 'str'>
-print(dict2json) # {"name": "DS2Man", "age": 30} # Note. must double
+dict2json = json.dumps(data) # default : ensure_ascii=True
+print(type(dict2json)) # <class 'str'>
+print(dict2json) # {"name": "DS2Man, \ub370\ud22c\ub0a8", "age": 30} # Note. must double
+
+dict2json = json.dumps(data, ensure_ascii=False)
+print(type(dict2json)) # <class 'str'>
+print(dict2json) # {"name": "DS2Man, 데투남", "age": 30} # Note. must double
 ```
+
+You can use the `ensure_ascii` option to convert Unicode characters into ASCII representations.
+
+|Option|Description|
+|---|---|
+|`ensure_ascii=True` _(default)_|Escapes all non-ASCII (Unicode) characters into ASCII (e.g., "한글" → `\ud55c\uae00`)|
+|`ensure_ascii=False`|Outputs Unicode characters as-is without escaping (e.g., "한글" → `한글`)|
 
 #### *Convert JSON to dict*
 
